# PythonTableConsole

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  PythonTableConsole.py  README.md  SECURITY.md  pyproject.toml
src/PythonTableConsole/: __init__.py  __main__.py  classes.py
