# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PythonTableConsole"
version = "1.1.2"
description = "Module for creating tables for console applications"
readme = "README.md"
authors = [{ name = "Mykhailo Holub", email = "mishataube2005@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["console", "table"]
dependencies = []
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["bumpver", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/MINIAProgramStudio/PythonTableConsole"

[project.scripts]
PythonTableConsole = "PythonTableConsole.__main__:main"

[tool.bumpver]
current_version = "1.1.2"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/PythonTableConsole/__main__.py" = [
    '# version = {version}',
]


